# space_tts

./: Cargo.toml  README.md  setup.sh
_bmad-output/implementation-artifacts/: tech-spec-space-stt.md
_bmad/_config/: agent-manifest.csv  bmad-help.csv  files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
_bmad/tea/: config.yaml
client/: Cargo.toml
client/src/: audio.rs  hotkey.rs  inject.rs  main.rs  remote.rs  tui.rs  vad.rs
common/: Cargo.toml
common/src/: lib.rs  log.rs  models.rs
server/: Cargo.toml
server/src/: main.rs  server.rs  transcribe.rs
src/: audio.rs  hotkey.rs  inject.rs  log.rs  main.rs  protocol.rs  remote.rs  server.rs  transcribe.rs  tui.rs
